--- a/menu-images-backend/package.json
+++ b/menu-images-backend/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^2.3.4",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "request": "^2.88.0",
     "yelp-fusion": "^2.2.1"
   }
