--- a/menu-images/package.json
+++ b/menu-images/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/storage": "^2.3.4",
     "cors": "^2.8.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
