--- a/menu-images-backend/package.json
+++ b/menu-images-backend/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^2.3.4",
+    "base64-img": "^1.0.4",
+    "base64-url": "^2.2.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
@@ -14,11 +16,14 @@
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
     "firebase": "^5.7.3",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
+    "node-fetch": "^2.3.0",
     "request": "^2.88.0",
+    "unirest": "^0.5.1",
     "yelp-fusion": "^2.2.1"
   }
 }
