--- a/menu-images/package.json
+++ b/menu-images/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@google-cloud/storage": "^2.3.4",
     "cors": "^2.8.5",
+    "form-data": "^2.3.3",
+    "fs": "0.0.1-security",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.1",
     "styled-components": "^4.1.3",
+    "unirest": "^0.5.1",
     "urlencode": "^1.1.0",
     "yelp-fusion": "^2.2.1"
   },
